--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/puppeteer-core": "^2.0.0",
     "axios": "^0.26.0",
     "better-sqlite3": "^7.5.0",
+    "compress-images": "^2.0.5",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "datauri": "^2.0.0",
@@ -28,8 +29,6 @@
     "mime-types": "^2.1.34",
     "node-tweet-stream": "^2.1.0",
     "puppeteer": "^2.1.1",
-    "puppeteer-core": "^13.3.2",
-    "puppeteer-extra": "^3.1.9",
     "puppeteer-extra-plugin-adblocker": "^2.11.3",
     "puppeteer-extra-plugin-stealth": "^2.4.9",
     "string-similarity": "^4.0.4",
@@ -37,6 +36,8 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
+    "puppeteer-core": "^15.3.0",
+    "puppeteer-extra": "^3.3.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
