--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "jsdom": "^19.0.0",
     "knex": "^1.0.3",
     "mime-types": "^2.1.34",
+    "nightmare": "^3.0.2",
     "node-tweet-stream": "^2.1.0",
     "puppeteer": "^2.1.1",
     "puppeteer-extra-plugin-adblocker": "^2.11.3",
     "puppeteer-extra-plugin-stealth": "^2.4.9",
+    "readline-sync": "^1.4.10",
     "string-similarity": "^4.0.4",
-    "tmp-promise": "^3.0.3"
+    "tmp-promise": "^3.0.3",
+    "vo": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
