--- a/package.json
+++ b/package.json
@@ -11,31 +11,41 @@
   },
   "dependencies": {
     "@bundlr-network/client": "^0.5.12",
+    "@google-cloud/local-auth": "^2.1.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
     "@types/fs-extra": "^8.1.0",
     "@types/jsdom": "^16.1.0",
     "@types/puppeteer": "^5.4.4",
     "@types/puppeteer-core": "^2.0.0",
+    "arweave": "^1.11.4",
     "axios": "^0.26.0",
     "better-sqlite3": "^7.5.0",
+    "cjs": "^0.0.11",
     "compress-images": "^2.0.5",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "datauri": "^2.0.0",
     "express": "^4.17.1",
+    "gifsicle": "^5.2.1",
+    "google-auth-library": "^8.1.1",
+    "googleapis": "^105.0.0",
     "jsdom": "^19.0.0",
     "knex": "^1.0.3",
     "mime-types": "^2.1.34",
     "nightmare": "^3.0.2",
     "node-tweet-stream": "^2.1.0",
+    "open": "^8.4.0",
+    "pngquant": "^4.0.0",
+    "pngquant-bin": "^6.0.1",
     "puppeteer": "^2.1.1",
     "puppeteer-extra-plugin-adblocker": "^2.11.3",
     "puppeteer-extra-plugin-stealth": "^2.4.9",
     "readline-sync": "^1.4.10",
     "string-similarity": "^4.0.4",
     "tmp-promise": "^3.0.3",
-    "vo": "^4.0.2"
+    "vo": "^4.0.2",
+    "ytdl-core": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
